Bug#54423 Ndb : ndb_restore is too strict about schema matches

ndb_restore now produces more information about mismatches, and accepts :
 - Different 'Dynamic' setting
 - Different storage type (memory/disk)
 - Different default values
 - Different 'distribution key' setting